tools/tests/errors/surf_lib_04.ki
# An empty string is not valid JSON.
var j = import("json")
discard j.loads("")
